--- a/index.ipynb
+++ b/index.ipynb
@@ -276,7 +276,10 @@
    ],
    "source": [
     "import plotly\n",
-    "plotly.offline.init_notebook_mode(connected=True)\n"
+    "plotly.offline.init_notebook_mode(connected=True)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
