--- a/index.ipynb
+++ b/index.ipynb
@@ -278,7 +278,7 @@
     "import plotly\n",
     "plotly.offline.init_notebook_mode(connected=True)\n",
     "\n",
-    "trace1 = {'x': }\n",
+    "trace1 = {'x':[]}\n",
     "\n"
    ]
   },
