--- a/index.ipynb
+++ b/index.ipynb
@@ -278,7 +278,7 @@
     "import plotly\n",
     "plotly.offline.init_notebook_mode(connected=True)\n",
     "\n",
-    "trace1 = {'x':[1,2,3,4] }\n",
+    "trace1 = {'x':[1,2,3,4], }\n",
     "\n"
    ]
   },
