--- a/index.ipynb
+++ b/index.ipynb
@@ -280,6 +280,7 @@
     "\n",
     "trace1 = {'x':[1,2,3,4], 'y': [2,2,2,2]}\n",
     "\n",
+    "trace1 = {'x':[1,2,3,4], 'y': [2,2,2,2]}\n",
     "\n"
    ]
   },
