--- a/index.ipynb
+++ b/index.ipynb
@@ -245,7 +245,7 @@
     "\n",
     "trace2 = {'x':[1,2,3,4], 'y': [1,1,1,1]}\n",
     "\n",
-    "plotly.offline.iplot([trace)\n"
+    "plotly.offline.iplot([trace1, trace2])\n"
    ]
   },
   {
