--- a/index.ipynb
+++ b/index.ipynb
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -231,6 +231,55 @@
       ],
       "text/vnd.plotly.v1+html": [
        "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "type": "scatter",
+         "uid": "80b20876-0888-11e9-8493-b59f08892862",
+         "x": [
+          1,
+          2,
+          3,
+          4
+         ],
+         "y": [
+          2,
+          2,
+          2,
+          2
+         ]
+        },
+        {
+         "type": "scatter",
+         "uid": "80b20a4c-0888-11e9-8493-b59f08892862",
+         "x": [
+          1,
+          2,
+          3,
+          4
+         ],
+         "y": [
+          1,
+          1,
+          1,
+          1
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"90729934-f5c8-434f-8984-482592ee146e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"90729934-f5c8-434f-8984-482592ee146e\", [{\"x\": [1, 2, 3, 4], \"y\": [2, 2, 2, 2], \"type\": \"scatter\", \"uid\": \"80b6eeae-0888-11e9-8493-b59f08892862\"}, {\"x\": [1, 2, 3, 4], \"y\": [1, 1, 1, 1], \"type\": \"scatter\", \"uid\": \"80b6f0c0-0888-11e9-8493-b59f08892862\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"90729934-f5c8-434f-8984-482592ee146e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"90729934-f5c8-434f-8984-482592ee146e\", [{\"x\": [1, 2, 3, 4], \"y\": [2, 2, 2, 2], \"type\": \"scatter\", \"uid\": \"80b6eeae-0888-11e9-8493-b59f08892862\"}, {\"x\": [1, 2, 3, 4], \"y\": [1, 1, 1, 1], \"type\": \"scatter\", \"uid\": \"80b6f0c0-0888-11e9-8493-b59f08892862\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
