Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -294,7 +294,7 @@
     "\n",
     "trace2 = {'x':[1,2,3,4], 'y': [1,1,1,1]}\n",
     "\n",
-    "plotly.offline.iplot([trace1, trace2])\n"
+    "plotly.offline.iplot([trace1, trace2)\n"
    ]
   },
   {
