Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -221,16 +221,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-6-a277c8f56f66>, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-a277c8f56f66>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    plotly.offline.iplot([trace1, trace2)\u001b[0m\n\u001b[0m                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "markers",
+         "type": "scatter",
+         "uid": "e4bee794-0888-11e9-8493-b59f08892862",
+         "x": [
+          1,
+          2,
+          3,
+          4
+         ],
+         "y": [
+          2,
+          2,
+          2,
+          2
+         ]
+        },
+        {
+         "mode": "markers",
+         "type": "scatter",
+         "uid": "e4bee988-0888-11e9-8493-b59f08892862",
+         "x": [
+          1,
+          2,
+          3,
+          4
+         ],
+         "y": [
+          1,
+          1,
+          1,
+          1
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"33818488-06f9-47f8-92dd-4d119d9e8005\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"33818488-06f9-47f8-92dd-4d119d9e8005\", [{\"mode\": \"markers\", \"x\": [1, 2, 3, 4], \"y\": [2, 2, 2, 2], \"type\": \"scatter\", \"uid\": \"e4c87a98-0888-11e9-8493-b59f08892862\"}, {\"mode\": \"markers\", \"x\": [1, 2, 3, 4], \"y\": [1, 1, 1, 1], \"type\": \"scatter\", \"uid\": \"e4c87c5a-0888-11e9-8493-b59f08892862\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"33818488-06f9-47f8-92dd-4d119d9e8005\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"33818488-06f9-47f8-92dd-4d119d9e8005\", [{\"mode\": \"markers\", \"x\": [1, 2, 3, 4], \"y\": [2, 2, 2, 2], \"type\": \"scatter\", \"uid\": \"e4c87a98-0888-11e9-8493-b59f08892862\"}, {\"mode\": \"markers\", \"x\": [1, 2, 3, 4], \"y\": [1, 1, 1, 1], \"type\": \"scatter\", \"uid\": \"e4c87c5a-0888-11e9-8493-b59f08892862\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -241,7 +296,7 @@
     "\n",
     "trace2 = {'x':[1,2,3,4], 'y': [1,1,1,1],'mode':\"markers\"}\n",
     "\n",
-    "plotly.offline.iplot([trace1, trace2)\n"
+    "plotly.offline.iplot([trace1, trace2])\n"
    ]
   },
   {
