Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,7 @@
     "import plotly\n",
     "plotly.offline.init_notebook_mode(connected=True)\n",
     "\n",
-    "trace1 = {'x':[1,2,3,4], 'y': [2,2,2,2],'mode':\"markers\"}\n",
+    "trace1 = {'x':[1,2,3,4], 'y': [2,2,2,2],'mode':\"markers\",}\n",
     "\n",
     "trace2 = {'x':[1,2,3,4], 'y': [1,1,1,1],'mode':\"markers\"}\n",
     "\n",
