--- a/index.ipynb
+++ b/index.ipynb
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -242,8 +242,14 @@
        "data": [
         {
          "mode": "markers",
+         "text": [
+          "josue",
+          "vinay",
+          "jim",
+          "stacey"
+         ],
          "type": "scatter",
-         "uid": "e4bee794-0888-11e9-8493-b59f08892862",
+         "uid": "306948ba-0889-11e9-8493-b59f08892862",
          "x": [
           1,
           2,
@@ -260,7 +266,7 @@
         {
          "mode": "markers",
          "type": "scatter",
-         "uid": "e4bee988-0888-11e9-8493-b59f08892862",
+         "uid": "30694b62-0889-11e9-8493-b59f08892862",
          "x": [
           1,
           2,
@@ -278,10 +284,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"33818488-06f9-47f8-92dd-4d119d9e8005\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"33818488-06f9-47f8-92dd-4d119d9e8005\", [{\"mode\": \"markers\", \"x\": [1, 2, 3, 4], \"y\": [2, 2, 2, 2], \"type\": \"scatter\", \"uid\": \"e4c87a98-0888-11e9-8493-b59f08892862\"}, {\"mode\": \"markers\", \"x\": [1, 2, 3, 4], \"y\": [1, 1, 1, 1], \"type\": \"scatter\", \"uid\": \"e4c87c5a-0888-11e9-8493-b59f08892862\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"f1c4e280-d253-4d19-a562-c4d9284c144d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f1c4e280-d253-4d19-a562-c4d9284c144d\", [{\"mode\": \"markers\", \"text\": [\"josue\", \"vinay\", \"jim\", \"stacey\"], \"x\": [1, 2, 3, 4], \"y\": [2, 2, 2, 2], \"type\": \"scatter\", \"uid\": \"306f04a8-0889-11e9-8493-b59f08892862\"}, {\"mode\": \"markers\", \"x\": [1, 2, 3, 4], \"y\": [1, 1, 1, 1], \"type\": \"scatter\", \"uid\": \"306f06ce-0889-11e9-8493-b59f08892862\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"33818488-06f9-47f8-92dd-4d119d9e8005\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"33818488-06f9-47f8-92dd-4d119d9e8005\", [{\"mode\": \"markers\", \"x\": [1, 2, 3, 4], \"y\": [2, 2, 2, 2], \"type\": \"scatter\", \"uid\": \"e4c87a98-0888-11e9-8493-b59f08892862\"}, {\"mode\": \"markers\", \"x\": [1, 2, 3, 4], \"y\": [1, 1, 1, 1], \"type\": \"scatter\", \"uid\": \"e4c87c5a-0888-11e9-8493-b59f08892862\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"f1c4e280-d253-4d19-a562-c4d9284c144d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f1c4e280-d253-4d19-a562-c4d9284c144d\", [{\"mode\": \"markers\", \"text\": [\"josue\", \"vinay\", \"jim\", \"stacey\"], \"x\": [1, 2, 3, 4], \"y\": [2, 2, 2, 2], \"type\": \"scatter\", \"uid\": \"306f04a8-0889-11e9-8493-b59f08892862\"}, {\"mode\": \"markers\", \"x\": [1, 2, 3, 4], \"y\": [1, 1, 1, 1], \"type\": \"scatter\", \"uid\": \"306f06ce-0889-11e9-8493-b59f08892862\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -292,7 +298,7 @@
     "import plotly\n",
     "plotly.offline.init_notebook_mode(connected=True)\n",
     "\n",
-    "trace1 = {'x':[1,2,3,4], 'y': [2,2,2,2],'mode':\"markers\",'text':['josue','vinay','jim',]}\n",
+    "trace1 = {'x':[1,2,3,4], 'y': [2,2,2,2],'mode':\"markers\",'text':['josue','vinay','jim','stacey']}\n",
     "\n",
     "trace2 = {'x':[1,2,3,4], 'y': [1,1,1,1],'mode':\"markers\"}\n",
     "\n",
