--- a/index.ipynb
+++ b/index.ipynb
@@ -260,7 +260,7 @@
     "import plotly\n",
     "plotly.offline.init_notebook_mode(connected=True)\n",
     "\n",
-    "trace1 = {'x':[1,2,3,4], 'y': [2,2,2,2],'mode':\"markers\",'text':['josue','vinay','jim','stacey'],'type':'bar'}\n",
+    "trace1 = {'x':[1,2,3,4], 'y': [2,2,2,2],'text':['josue','vinay','jim','stacey'],'type':'bar'}\n",
     "\n",
     "trace2 = {'x':[1,2,3,4], 'y': [1,1,1,1],'mode':\"markers\"}\n",
     "\n",
